--- a/EtchNSketch/sketch.css
+++ b/EtchNSketch/sketch.css
@@ -1,4 +1,6 @@
-
+*{
+	font-family: Arial;
+}
 a {
 	color: black;
 	text-decoration: none;
@@ -21,6 +23,7 @@ h2{
 #container {
 	/*border: 1px solid black; */
 	text-align: center;
+	
 }
 
 .black {
